@@ -3,6 +3,7 @@
 - Bugfix: Replace the $hellip; in the file service, it may cause
   double escaping issues in the backend of some systems.
 - Bugfix: The method analysis doesn't take traits into account.
+- Bugfix: The property analysis doesn't take traits into account.
 
 3.0.1
 - Change: All singelton classes now add themself to the pool as
